<resources>
    <string name="app_name">comrades</string>
    <string name="splash">splash</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="comrades">Comrades</string>
    <string name="calender">Calender</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user">User</string>
    <string name="log_out">Log Out</string>
    <string name="set">Set</string>
</resources>